[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Player/stickman.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Player" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AttackOrigin" type="Position2D" parent="."]
position = Vector2( 10, -5 )

[node name="InputArea" type="TouchScreenButton" parent="."]
position = Vector2( 10, -180 )
scale = Vector2( 30, 20 )
shape = SubResource( 1 )
passby_press = true
action = "attack"

[connection signal="pressed" from="InputArea" to="." method="_on_InputArea_pressed"]
[connection signal="released" from="InputArea" to="." method="_on_InputArea_released"]
